Kotlinx.datetime dependency. K2 support.

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,7 @@ systemProp.composeVersion=1.5.1-dev-wasm01
 javaVersion=17
 coroutinesVersion=1.7.2-wasm1
 serializationVersion=1.6.0-wasm0
+dateTimeVersion=0.4.0-wasm2
 
 cssLoaderVersion=6.8.1
 styleLoaderVersion=3.3.3
@@ -46,3 +47,6 @@ org.gradle.parallel=true
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
 org.gradle.kotlin.dsl.precompiled.accessors.strict=true
+
+kotlin.code.style=official
+kotlin.experimental.tryK2=true
