--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,7 @@ dateTimeVersion=0.4.0-wasm2
 cssLoaderVersion=6.8.1
 styleLoaderVersion=3.3.3
 importsLoaderVersion=4.0.1
+splitjsVersion=1.6.5
 
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 org.gradle.jvmargs=-Xmx6g
