--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 kotlin = "1.9.20-RC"
-compose = "1.5.1-dev-wasm01"
-compose-plugin = "1.5.2.1-Beta"
+compose = "1.5.10-dev-wasm01"
+compose-plugin = "1.5.2.1-rc01"
 npm-publish = "3.4.1"
 kilua = "0.0.1"
 kotlinx-coroutines = "1.7.2-wasm1"
