Upgrade Kotlin to 1.9.20

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-kotlin = "1.9.20-RC"
-compose = "1.5.10-dev-wasm01"
-compose-plugin = "1.5.2.1-rc01"
+kotlin = "1.9.20"
+compose = "1.5.10-dev-wasm02"
+compose-plugin = "1.5.3"
 npm-publish = "3.4.1"
 kilua = "0.0.1"
-kotlinx-coroutines = "1.7.2-wasm2"
-kotlinx-serialization = "1.6.0-wasm0"
-kotlinx-datetime = "0.4.0-wasm2"
+kotlinx-coroutines = "1.7.2-wasm3"
+kotlinx-serialization = "1.6.1-wasm1"
+kotlinx-datetime = "0.4.1-wasm1"
 npm-kilua-assets = "0.0.4"
 css-loader = "6.8.1"
 style-loader = "3.3.3"
