--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,8 @@ kilua = "0.0.1"
 kotlinx-coroutines = "1.7.2-wasm3"
 kotlinx-serialization = "1.6.1-wasm1"
 kotlinx-datetime = "0.4.1-wasm1"
+detekt = "1.23.3"
+vannik-maven-publish = "0.25.3"
 npm-kilua-assets = "0.0.4"
 css-loader = "6.8.1"
 style-loader = "3.3.3"
@@ -25,3 +27,5 @@ compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 npm-publish = { id = "dev.petuska.npm.publish", version.ref = "npm-publish" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "vannik-maven-publish" }
