--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs=-Xmx6g
 org.gradle.parallel=true
-org.gradle.caching=true
+#org.gradle.caching=true
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
 org.gradle.kotlin.dsl.precompiled.accessors.strict=true
 
 kotlin.mpp.stability.nowarn=true
 kotlin.code.style=official
-kotlin.experimental.tryK2=true
+#kotlin.experimental.tryK2=true
 
 #buildTarget=js
 buildTarget=wasm
