--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,10 @@ style-loader = "3.3.3"
 imports-loader = "4.0.1"
 splitjs = "1.6.5"
 html-differ = "1.4.0"
-trix = "2.0.7"
+popperjs-core = "2.11.8"
+bootstrap = "5.3.2"
+bootstrap-icons = "1.11.0"
+trix = "2.0.8"
 
 [libraries]
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
