Upgrade dependencies (Coroutines 1.8.0-RC, Datetime 0.5.0)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ compose = "1.5.10-dev-wasm03"
 compose-plugin = "1.5.4"
 npm-publish = "3.4.1"
 kilua = "0.0.1"
-kotlinx-coroutines = "1.7.2-wasm3"
+kotlinx-coroutines = "1.8.0-RC"
 kotlinx-serialization = "1.6.2"
-kotlinx-datetime = "0.4.1-wasm1"
+kotlinx-datetime = "0.5.0"
 detekt = "1.23.3"
 vannik-maven-publish = "0.25.3"
 npm-kilua-assets = "0.0.9"
