Upgrade dependencies (gradle 8.5, coroutines 1.8.0-RC2, detekt 1.23.4, fontawesome 6.5.1, bootstrap-icons 1.11.2)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,10 +5,10 @@ compose-plugin = "1.5.4"
 npm-publish = "3.4.1"
 kilua = "0.0.1"
 kotlinx-atomicfu = "0.23.1"
-kotlinx-coroutines = "1.8.0-RC"
+kotlinx-coroutines = "1.8.0-RC2"
 kotlinx-serialization = "1.6.2"
 kotlinx-datetime = "0.5.0"
-detekt = "1.23.3"
+detekt = "1.23.4"
 vannik-maven-publish = "0.25.3"
 npm-kilua-assets = "0.0.1"
 css-loader = "6.8.1"
@@ -18,8 +18,8 @@ splitjs = "1.6.5"
 html-differ = "1.4.0"
 popperjs-core = "2.11.8"
 bootstrap = "5.3.2"
-bootstrap-icons = "1.11.0"
-fontawesome = "6.4.2"
+bootstrap-icons = "1.11.2"
+fontawesome = "6.5.1"
 trix = "2.0.8"
 
 [libraries]
