--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kotlin = "1.9.21"
-compose = "1.6.0-alpha01"
-compose-plugin = "1.5.4"
+kotlin = "1.9.22"
+compose = "1.6.0-beta01"
+compose-plugin = "1.5.7.1"
 npm-publish = "3.4.2"
 kilua = "0.0.1"
 kotlinx-atomicfu = "0.23.1"
