--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ toastify = "1.12.0"
 tempus-dominus = "6.9.5"
 tom-select = "2.3.1"
 imask = "7.3.0"
+tabulator = "5.5.4"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
