--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
 kotlin = "1.9.22"
-compose = "1.6.0-beta02"
+compose = "1.6.0-rc02"
 compose-plugin = "1.5.8"
 dokka = "1.9.20-dev-308"
-nmcp = "0.0.3"
+nmcp = "0.0.4"
 npm-publish = "3.4.2"
 kilua = "0.0.1"
 kotlinx-atomicfu = "0.23.1"
-kotlinx-coroutines = "1.8.0-RC2"
+kotlinx-coroutines = "1.8.0"
 kotlinx-serialization = "1.6.2"
 kotlinx-datetime = "0.5.0"
 detekt = "1.23.4"
 npm-kilua-assets = "0.0.5"
-css-loader = "6.8.1"
-style-loader = "3.3.3"
-imports-loader = "4.0.1"
+css-loader = "6.10.0"
+style-loader = "3.3.4"
+imports-loader = "5.0.0"
 splitjs = "1.6.5"
 html-differ = "1.4.0"
 popperjs-core = "2.11.8"
@@ -25,8 +25,8 @@ trix = "2.0.10"
 toastify = "1.12.0"
 tempus-dominus = "6.9.5"
 tom-select = "2.3.1"
-imask = "7.3.0"
-tabulator = "5.5.4"
+imask = "7.4.0"
+tabulator = "5.6.0"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
