Upgraded dependencies (Kotlin 2.0.0-Beta4, Compose 1.6.0-rc03, Serialization 1.6.3, Detekt 1.23.5, Bootstrap 5.3.3, Tabulator 5.6.1)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
-kotlin = "1.9.22"
-compose = "1.6.0-rc02"
-compose-plugin = "1.5.8"
-dokka = "1.9.20-dev-308"
+kotlin = "2.0.0-Beta4"
+compose = "1.6.0-rc03"
+compose-plugin = "1.5.9-kt-2.0.0-Beta4"
+dokka = "2.0.0-dev-317"
 nmcp = "0.0.4"
 npm-publish = "3.4.2"
 kilua = "0.0.1"
-kotlinx-atomicfu = "0.23.1"
+kotlinx-atomicfu = "0.23.2"
 kotlinx-coroutines = "1.8.0"
-kotlinx-serialization = "1.6.2"
+kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.5.0"
-detekt = "1.23.4"
+detekt = "1.23.5"
 npm-kilua-assets = "0.0.7"
 css-loader = "6.10.0"
 style-loader = "3.3.4"
@@ -18,7 +18,7 @@ imports-loader = "5.0.0"
 splitjs = "1.6.5"
 html-differ = "1.4.0"
 popperjs-core = "2.11.8"
-bootstrap = "5.3.2"
+bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
 fontawesome = "6.5.1"
 trix = "2.0.10"
@@ -26,7 +26,7 @@ toastify = "1.12.0"
 tempus-dominus = "6.9.5"
 tom-select = "2.3.1"
 imask = "7.4.0"
-tabulator = "5.6.0"
+tabulator = "5.6.1"
 rsup-progress = "3.2.0"
 
 [libraries]
