Upgraded dependencies (Compose 1.6.0, kotlinx-datetime 0.6.0-RC.2, imask 7.5.0)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 kotlin = "2.0.0-Beta4"
-compose = "1.6.0-rc03"
+compose = "1.6.0"
 compose-plugin = "1.5.9-kt-2.0.0-Beta4"
-dokka = "2.0.0-dev-317"
+dokka = "2.0.0-dev-318"
 nmcp = "0.0.4"
 npm-publish = "3.4.2"
 kilua = "0.0.1"
 kotlinx-atomicfu = "0.23.2"
 kotlinx-coroutines = "1.8.0"
 kotlinx-serialization = "1.6.3"
-kotlinx-datetime = "0.5.0"
+kotlinx-datetime = "0.6.0-RC.2"
 detekt = "1.23.5"
 npm-kilua-assets = "0.0.7"
 css-loader = "6.10.0"
@@ -25,7 +25,7 @@ trix = "2.0.10"
 toastify = "1.12.0"
 tempus-dominus = "6.9.5"
 tom-select = "2.3.1"
-imask = "7.4.0"
+imask = "7.5.0"
 tabulator = "5.6.1"
 rsup-progress = "3.2.0"
 
