Clean common-types module. Remove common-annotations module.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,4 @@ org.gradle.kotlin.dsl.precompiled.accessors.strict=true
 
 kotlin.mpp.stability.nowarn=true
 kotlin.code.style=official
-kotlin.experimental.tryK2=true
+kotlin.experimental.tryK2=false
