--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,15 +2,19 @@
 kotlin = "1.9.22"
 compose = "1.6.0"
 compose-plugin = "1.5.8.1"
-dokka = "2.0.0-dev-318"
+dokka = "1.9.20"
 nmcp = "0.0.4"
+detekt = "1.23.5"
 npm-publish = "3.4.2"
 kilua = "0.0.1"
 kotlinx-atomicfu = "0.23.2"
 kotlinx-coroutines = "1.8.0"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.6.0-RC.2"
-detekt = "1.23.5"
+kilua-rpc = "0.0.1-SNAPSHOT"
+ktor = "2.3.9"
+koin-annotations = "1.3.1"
+logback = "1.5.3"
 npm-kilua-assets = "0.0.7"
 css-loader = "6.10.0"
 style-loader = "3.3.4"
@@ -35,6 +39,11 @@ kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core",
 kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+kilua-rpc-ktor-koin = { module = "dev.kilua:kilua-rpc-ktor-koin", version.ref = "kilua-rpc" }
+ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
+ktor-server-compression = { module = "io.ktor:ktor-server-compression", version.ref = "ktor" }
+koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koin-annotations" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
 [plugins]
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
@@ -44,3 +53,4 @@ npm-publish = { id = "dev.petuska.npm.publish", version.ref = "npm-publish" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 nmcp = { id = "com.gradleup.nmcp", version.ref = "nmcp" }
+kilua-rpc = { id = "dev.kilua.rpc", version.ref = "kilua-rpc" }
