--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,23 @@
 [versions]
 kotlin = "1.9.23"
-compose = "1.6.0"
-compose-plugin = "1.5.8.1"
+compose = "1.6.1"
+compose-plugin = "1.5.10.1"
 dokka = "1.9.20"
 nmcp = "0.0.4"
 detekt = "1.23.5"
 npm-publish = "3.4.2"
+gradle-plugin-publish = "1.2.1"
 kilua = "0.0.1"
-kilua-rpc = "0.0.2-SNAPSHOT"
+kilua-published = "0.0.1-SNAPSHOT"
+kilua-rpc = "0.0.4"
 kotlinx-atomicfu = "0.23.2"
-kotlinx-coroutines = "1.8.0"
+kotlinx-coroutines = "1.8.1-Beta"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.6.0-RC.2"
 ktor = "2.3.9"
 koin-annotations = "1.3.1"
 logback = "1.5.3"
+tomlj = "1.1.1"
 npm-kilua-assets = "0.0.7"
 css-loader = "6.10.0"
 style-loader = "3.3.4"
@@ -41,10 +44,15 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 kilua-rpc-core = { module = "dev.kilua:kilua-rpc-core", version.ref = "kilua-rpc" }
 kilua-rpc-ktor-koin = { module = "dev.kilua:kilua-rpc-ktor-koin", version.ref = "kilua-rpc" }
+ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
 ktor-server-compression = { module = "io.ktor:ktor-server-compression", version.ref = "ktor" }
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koin-annotations" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-apache = { module = "io.ktor:ktor-client-apache", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
+tomlj = { module = "org.tomlj:tomlj", version.ref = "tomlj" }
 
 [plugins]
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
@@ -55,3 +63,5 @@ detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 nmcp = { id = "com.gradleup.nmcp", version.ref = "nmcp" }
 kilua-rpc = { id = "dev.kilua.rpc", version.ref = "kilua-rpc" }
+gradle-plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "gradle-plugin-publish" }
+kilua = { id = "dev.kilua", version.ref = "kilua-published" }
