--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlinx-coroutines = "1.8.1-Beta"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.6.0-RC.2"
 javalin = "6.1.3"
+jooby = "3.0.8"
 ktor = "2.3.9"
 koin-annotations = "1.3.1"
 spring-boot = "3.2.4"
@@ -47,6 +48,8 @@ kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 javalin = { module = "io.javalin:javalin", version.ref = "javalin" }
+jooby-kotlin = { module = "io.jooby:jooby-kotlin", version.ref = "jooby" }
+jooby-netty = { module = "io.jooby:jooby-netty", version.ref = "jooby" }
 kilua-rpc-core = { module = "dev.kilua:kilua-rpc-core", version.ref = "kilua-rpc" }
 kilua-rpc-ktor-koin = { module = "dev.kilua:kilua-rpc-ktor-koin", version.ref = "kilua-rpc" }
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
@@ -75,3 +78,4 @@ gradle-plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "gradl
 kilua = { id = "dev.kilua", version.ref = "kilua-published" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
+jooby = { id = "io.jooby.run", version.ref = "jooby" }
