--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,9 @@ ktor = "2.3.9"
 koin-annotations = "1.3.1"
 spring-boot = "3.2.4"
 spring-dependency-management = "1.1.4"
+vertx = "4.5.7"
+vertx-plugin = "1.4.0"
+shadow = "8.1.1"
 logback = "1.5.3"
 tomlj = "1.1.1"
 npm-kilua-assets = "0.0.7"
@@ -62,6 +65,9 @@ ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "k
 kilua-rpc-spring-boot = { module = "dev.kilua:kilua-rpc-spring-boot", version.ref = "kilua-rpc" }
 spring-boot-starter = { module = "org.springframework.boot:spring-boot-starter", version.ref = "spring-boot" }
 spring-boot-starter-webflux = { module = "org.springframework.boot:spring-boot-starter-webflux", version.ref = "spring-boot" }
+vertx-web = { module = "io.vertx:vertx-web", version.ref = "vertx" }
+vertx-lang-kotlin = { module = "io.vertx:vertx-lang-kotlin", version.ref = "vertx" }
+vertx-lang-kotlin-coroutines = { module = "io.vertx:vertx-lang-kotlin-coroutines", version.ref = "vertx" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 tomlj = { module = "org.tomlj:tomlj", version.ref = "tomlj" }
 
@@ -79,3 +85,5 @@ kilua = { id = "dev.kilua", version.ref = "kilua-published" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 jooby = { id = "io.jooby.run", version.ref = "jooby" }
+vertx = { id = "io.vertx.vertx-plugin", version.ref = "vertx-plugin" }
+shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
