New i18n module with support for gettext translations

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
 kilua-rpc = "0.0.5"
+kilua-gettext = "0.0.1"
 kotlinx-atomicfu = "0.23.2"
 kotlinx-coroutines = "1.8.1-Beta"
 kotlinx-serialization = "1.6.3"
