Minimize css served by SSR

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ vertx-plugin = "1.4.0"
 shadow = "8.1.1"
 logback = "1.5.3"
 tomlj = "1.1.1"
+wro4j = "2.1.1"
 npm-kilua-assets = "0.0.7"
 css-loader = "6.11.0"
 style-loader = "3.3.4"
