Upgraded dependencies (Kotlin 2.0.0-RC1, Compose 1.6.2, Kiluar RPC 0.0.7, Kilua Gettext 0.0.2)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 kilua = "0.0.1"
-kilua-published = "0.0.1-SNAPSHOT"
-kotlin = "1.9.23"
-compose = "1.6.1"
-compose-plugin = "1.5.10.1"
+kilua-published = "0.0.1-kt-2.0.0-RC1-SNAPSHOT"
+kotlin = "2.0.0-RC1"
+compose = "1.6.2"
+compose-plugin = "1.5.11-kt-2.0.0-RC1"
 dokka = "1.9.20"
 nmcp = "0.0.7"
-ksp = "1.9.23-1.0.20"
+ksp = "2.0.0-RC1-1.0.20"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.6"
-kilua-gettext = "0.0.1"
+kilua-rpc = "0.0.7"
+kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.23.2"
 kotlinx-coroutines = "1.8.1-Beta"
 kotlinx-serialization = "1.6.3"
