--- a/examples/ssr-spring-boot/src/jvmMain/resources/application.yml
+++ b/examples/ssr-spring-boot/src/jvmMain/resources/application.yml
@@ -10,3 +10,4 @@ ssr:
 #  externalSsrService: "http://localhost:7788"
 #  rpcUrlPrefix: "http://localhost:8080"
 #  rootId: "root"
+#  noCache: false
