--- a/examples/ssr-vertx/src/jvmMain/resources/application.properties
+++ b/examples/ssr-vertx/src/jvmMain/resources/application.properties
@@ -3,3 +3,4 @@ ssr.nodeExecutable=/home/rjaros/Programs/node/bin/node
 #  ssr.externalSsrService=http://localhost:7788
 #  ssr.rpcUrlPrefix=http://localhost:8080
 #  ssr.rootId=root
+#  ssr.noCache=false
