--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-kilua = "0.0.1"
-kilua-published = "0.0.1"
+kilua = "0.0.2"
+kilua-published = "0.0.2-SNAPSHOT"
 kotlin = "2.0.0-RC1"
 compose = "1.6.2"
 compose-plugin = "1.5.11-kt-2.0.0-RC1"
@@ -31,7 +31,7 @@ logback = "1.5.6"
 tomlj = "1.1.1"
 wro4j = "2.1.1"
 expiring-map = "0.5.11"
-npm-kilua-assets = "0.0.7"
+npm-kilua-assets = "0.0.9"
 css-loader = "7.1.1"
 style-loader = "4.0.0"
 imports-loader = "5.0.0"
@@ -51,6 +51,12 @@ rsup-progress = "3.2.0"
 lz-string = "1.5.0"
 marked = "12.0.2"
 sanitize-html = "2.13.0"
+postcss = "8.4.38"
+postcss-loader = "8.1.1"
+autoprefixer = "10.4.19"
+tailwindcss = "3.4.3"
+cssnano = "6.1.2"
+mini-css-extract-plugin = "2.9.0"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
