--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,28 @@
 [versions]
 kilua = "0.0.3"
 kilua-published = "0.0.3"
-kotlin = "2.0.0-RC1"
-compose = "1.6.2"
-compose-plugin = "1.5.11-kt-2.0.0-RC1"
+kotlin = "2.0.0-RC2"
+compose = "1.6.10-rc01"
 dokka = "1.9.20"
 nmcp = "0.0.7"
-ksp = "2.0.0-RC1-1.0.20"
+ksp = "2.0.0-RC2-1.0.20"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.7"
+kilua-rpc = "0.0.8"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.23.2"
 kotlinx-coroutines = "1.8.1-Beta"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.6.0-RC.2"
-javalin = "6.1.3"
+javalin = "6.1.4"
 jooby = "3.0.10"
 ktor = "2.3.10"
 koin-annotations = "1.3.1"
-micronaut = "4.4.1"
-micronaut-plugins = "4.3.7"
+micronaut = "4.4.2"
+micronaut-plugins = "4.3.8"
 spring-boot = "3.2.5"
-spring-dependency-management = "1.1.4"
+spring-dependency-management = "1.1.5"
 vertx = "4.5.7"
 vertx-plugin = "1.4.0"
 shadow = "8.1.1"
@@ -41,12 +40,12 @@ popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
 fontawesome = "6.5.2"
-trix = "2.1.0"
+trix = "2.1.1"
 toastify = "1.12.0"
 tempus-dominus = "6.9.6"
 tom-select = "2.3.1"
 imask = "7.6.0"
-tabulator = "6.2.0"
+tabulator = "6.2.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
 marked = "12.0.2"
@@ -55,7 +54,7 @@ postcss = "8.4.38"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.19"
 tailwindcss = "3.4.3"
-cssnano = "7.0.0"
+cssnano = "7.0.1"
 mini-css-extract-plugin = "2.9.0"
 
 [libraries]
@@ -91,8 +90,9 @@ expiring-map = { module = "net.jodah:expiringmap", version.ref = "expiring-map" 
 kilua-gettext = { module = "dev.kilua:kilua-gettext", version.ref = "kilua-gettext" }
 
 [plugins]
-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 npm-publish = { id = "dev.petuska.npm.publish", version.ref = "npm-publish" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
