Upgrade coroutines to 1.8.1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ gradle-plugin-publish = "1.2.1"
 kilua-rpc = "0.0.8"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.23.2"
-kotlinx-coroutines = "1.8.1-Beta"
+kotlinx-coroutines = "1.8.1"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.6.0-RC.2"
 javalin = "6.1.4"
