--- a/templates/template/gradle/libs.versions.toml
+++ b/templates/template/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
-kilua = "0.0.3"
-kotlin = "2.0.0-RC1"
-compose = "1.6.2"
-compose-plugin = "1.5.11-kt-2.0.0-RC1"
+kilua = "0.0.4"
+kotlin = "2.0.0-RC3"
+compose = "1.6.10-rc02"
 
 [libraries]
 kilua = { module = "dev.kilua:kilua", version.ref = "kilua" }
 
 [plugins]
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kilua = { id = "dev.kilua", version.ref = "kilua" }
