--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ kotlinx-datetime = "0.6.0"
 javalin = "6.1.4"
 jooby = "3.1.0"
 ktor = "2.3.11"
+koin = "3.6.0-Beta2"
 koin-annotations = "1.3.1"
 micronaut = "4.4.2"
 micronaut-plugins = "4.3.8"
@@ -25,6 +26,7 @@ spring-boot = "3.2.5"
 spring-dependency-management = "1.1.5"
 vertx = "4.5.7"
 vertx-plugin = "1.4.0"
+ballast = "4.2.0"
 shadow = "8.1.1"
 logback = "1.5.6"
 tomlj = "1.1.1"
@@ -73,6 +75,7 @@ ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
 ktor-server-compression = { module = "io.ktor:ktor-server-compression", version.ref = "ktor" }
 ktor-server-caching-headers = { module = "io.ktor:ktor-server-caching-headers", version.ref = "ktor" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koin-annotations" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-apache = { module = "io.ktor:ktor-client-apache", version.ref = "ktor" }
@@ -83,6 +86,11 @@ spring-boot-starter-webflux = { module = "org.springframework.boot:spring-boot-s
 vertx-web = { module = "io.vertx:vertx-web", version.ref = "vertx" }
 vertx-lang-kotlin = { module = "io.vertx:vertx-lang-kotlin", version.ref = "vertx" }
 vertx-lang-kotlin-coroutines = { module = "io.vertx:vertx-lang-kotlin-coroutines", version.ref = "vertx" }
+ballast-core = { module = "io.github.copper-leaf:ballast-core", version.ref = "ballast" }
+ballast-saved-state = { module = "io.github.copper-leaf:ballast-saved-state", version.ref = "ballast" }
+ballast-repository = { module = "io.github.copper-leaf:ballast-repository", version.ref = "ballast" }
+ballast-sync = { module = "io.github.copper-leaf:ballast-sync", version.ref = "ballast" }
+ballast-undo = { module = "io.github.copper-leaf:ballast-undo", version.ref = "ballast" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 tomlj = { module = "org.tomlj:tomlj", version.ref = "tomlj" }
 wro4j = { module = "ro.isdc.wro4j:wro4j-core", version.ref = "wro4j" }
