--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,39 +1,39 @@
 [versions]
 kilua = "0.0.4"
 kilua-published = "0.0.4"
-kotlin = "2.0.0-RC3"
-compose = "1.6.10-rc02"
+kotlin = "2.0.0"
+compose = "1.6.10"
 dokka = "1.9.20"
 nmcp = "0.0.7"
-ksp = "2.0.0-RC3-1.0.20"
+ksp = "2.0.0-1.0.21"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.10"
+kilua-rpc = "0.0.11"
 kilua-gettext = "0.0.2"
-kotlinx-atomicfu = "0.23.2"
+kotlinx-atomicfu = "0.24.0"
 kotlinx-coroutines = "1.8.1"
-kotlinx-serialization = "1.6.3"
+kotlinx-serialization = "1.7.0-RC"
 kotlinx-datetime = "0.6.0"
 javalin = "6.1.4"
-jooby = "3.1.0"
+jooby = "3.1.1"
 ktor = "2.3.11"
-koin = "3.6.0-Beta2"
+koin = "3.6.0-Beta4"
 koin-annotations = "1.3.1"
 micronaut = "4.4.2"
-micronaut-plugins = "4.3.8"
-spring-boot = "3.2.5"
+micronaut-plugins = "4.4.0"
+spring-boot = "3.3.0"
 spring-dependency-management = "1.1.5"
-vertx = "4.5.7"
+vertx = "4.5.8"
 vertx-plugin = "1.4.0"
-ballast = "4.2.0"
+ballast = "4.2.1"
 shadow = "8.1.1"
 logback = "1.5.6"
 tomlj = "1.1.1"
 wro4j = "2.1.1"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.9"
-css-loader = "7.1.1"
+css-loader = "7.1.2"
 style-loader = "4.0.0"
 imports-loader = "5.0.0"
 splitjs = "1.6.5"
@@ -46,7 +46,7 @@ trix = "2.1.1"
 toastify = "1.12.0"
 tempus-dominus = "6.9.7"
 tom-select = "2.3.1"
-imask = "7.6.0"
+imask = "7.6.1"
 tabulator = "6.2.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
