Upgraded dependencies (Compose 1.6.11, Coroutines 1.9.0-RC, Javalin 6.1.6, Tempus Dominus 6.9.9)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kilua = "0.0.5"
 kilua-published = "0.0.5"
 kotlin = "2.0.0"
-compose = "1.6.10"
+compose = "1.6.11"
 dokka = "1.9.20"
 nmcp = "0.0.7"
 ksp = "2.0.0-1.0.21"
@@ -12,10 +12,10 @@ gradle-plugin-publish = "1.2.1"
 kilua-rpc = "0.0.11"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.24.0"
-kotlinx-coroutines = "1.8.1"
+kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.0-RC"
 kotlinx-datetime = "0.6.0"
-javalin = "6.1.4"
+javalin = "6.1.6"
 jooby = "3.1.2"
 ktor = "2.3.11"
 koin = "3.6.0-Beta4"
@@ -44,7 +44,7 @@ bootstrap-icons = "1.11.3"
 fontawesome = "6.5.2"
 trix = "2.1.1"
 toastify = "1.12.0"
-tempus-dominus = "6.9.7"
+tempus-dominus = "6.9.9"
 tom-select = "2.3.1"
 imask = "7.6.1"
 tabulator = "6.2.1"
