Upgraded dependencies (nmcp 0.0.8, Kilua RPC 0.0.12, Serialization 1.7.0, Jooby 3.2.0, Micronaut 4.5.0, marked 13.0.0, tailwindcss 3.4.4, cssnano 7.0.2)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,23 +4,23 @@ kilua-published = "0.0.6"
 kotlin = "2.0.0"
 compose = "1.6.11"
 dokka = "1.9.20"
-nmcp = "0.0.7"
+nmcp = "0.0.8"
 ksp = "2.0.0-1.0.22"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.11"
+kilua-rpc = "0.0.12"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.24.0"
 kotlinx-coroutines = "1.9.0-RC"
-kotlinx-serialization = "1.7.0-RC"
+kotlinx-serialization = "1.7.0"
 kotlinx-datetime = "0.6.0"
 javalin = "6.1.6"
-jooby = "3.1.2"
+jooby = "3.2.0"
 ktor = "2.3.11"
 koin = "3.6.0-Beta4"
 koin-annotations = "1.3.1"
-micronaut = "4.4.3"
+micronaut = "4.5.0"
 micronaut-plugins = "4.4.0"
 spring-boot = "3.3.0"
 spring-dependency-management = "1.1.5"
@@ -50,13 +50,13 @@ imask = "7.6.1"
 tabulator = "6.2.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "12.0.2"
+marked = "13.0.0"
 sanitize-html = "2.13.0"
 postcss = "8.4.38"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.19"
-tailwindcss = "3.4.3"
-cssnano = "7.0.1"
+tailwindcss = "3.4.4"
+cssnano = "7.0.2"
 mini-css-extract-plugin = "2.9.0"
 
 [libraries]
