--- a/examples/ssr-ktor/src/jvmMain/resources/application.conf
+++ b/examples/ssr-ktor/src/jvmMain/resources/application.conf
@@ -23,5 +23,6 @@ ssr {
 #  externalSsrService = "http://localhost:7788"
 #  rpcUrlPrefix = "http://localhost:8080"
 #  rootId = "root"
+#  contextPath = "/"
 #  noCache = false
 }
