--- a/examples/ssr-jooby/src/jvmMain/resources/application.conf
+++ b/examples/ssr-jooby/src/jvmMain/resources/application.conf
@@ -4,5 +4,6 @@ ssr {
 #  externalSsrService = "http://localhost:7788"
 #  rpcUrlPrefix = "http://localhost:8080"
 #  rootId = "root"
+#  contextPath = "/"
 #  noCache = false
 }
