--- a/examples/ssr-micronaut/src/jvmMain/resources/application.yml
+++ b/examples/ssr-micronaut/src/jvmMain/resources/application.yml
@@ -15,4 +15,5 @@ ssr:
 #  externalSsrService: "http://localhost:7788"
 #  rpcUrlPrefix: "http://localhost:8080"
 #  rootId: "root"
+#  contextPath: "/"
 #  noCache: false
