--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ kotlin = "2.0.0"
 compose = "1.6.11"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.0-1.0.22"
+ksp = "2.0.0-1.0.23"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
@@ -15,16 +15,16 @@ kotlinx-atomicfu = "0.25.0"
 kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.1"
 kotlinx-datetime = "0.6.0"
-javalin = "6.1.6"
-jooby = "3.2.3"
+javalin = "6.2.0"
+jooby = "3.2.6"
 ktor = "2.3.12"
-koin = "3.6.0-Beta4"
-koin-annotations = "1.3.1"
-micronaut = "4.5.0"
-micronaut-plugins = "4.4.0"
-spring-boot = "3.3.1"
-spring-dependency-management = "1.1.5"
-vertx = "4.5.8"
+koin = "3.6.0-Beta5"
+koin-annotations = "1.4.0-RC3"
+micronaut = "4.5.1"
+micronaut-plugins = "4.4.2"
+spring-boot = "3.3.2"
+spring-dependency-management = "1.1.6"
+vertx = "4.5.9"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
 shadow = "8.1.1"
@@ -32,7 +32,7 @@ logback = "1.5.6"
 tomlj = "1.1.1"
 resources-optimizer = "2.6.4"
 expiring-map = "0.5.11"
-npm-kilua-assets = "0.0.12"
+npm-kilua-assets = "0.0.13"
 css-loader = "7.1.2"
 style-loader = "4.0.0"
 imports-loader = "5.0.0"
@@ -41,13 +41,13 @@ html-differ = "1.4.0"
 popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
-fontawesome = "6.5.2"
-trix = "2.1.1"
+fontawesome = "6.6.0"
+trix = "2.1.3"
 toastify = "1.12.0"
 tempus-dominus = "6.9.9"
 tom-select = "2.3.1"
 imask = "7.6.1"
-tabulator = "6.2.1"
+tabulator = "6.2.5"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
 marked = "13.0.2"
@@ -55,8 +55,8 @@ sanitize-html = "2.13.0"
 postcss = "8.4.39"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.19"
-tailwindcss = "3.4.4"
-cssnano = "7.0.3"
+tailwindcss = "3.4.6"
+cssnano = "7.0.4"
 mini-css-extract-plugin = "2.9.0"
 
 [libraries]
