--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
 kilua = "0.0.9"
 kilua-published = "0.0.9"
-kotlin = "2.0.0"
-compose = "1.6.11"
+kotlin = "2.0.20-RC2"
+compose = "1.7.0-alpha02"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.0-1.0.23"
+ksp = "2.0.20-RC2-1.0.24"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.15"
+kilua-rpc = "0.0.16"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.25.0"
-kotlinx-coroutines = "1.9.0-RC"
+kotlinx-coroutines = "1.9.0-RC.2"
 kotlinx-serialization = "1.7.1"
 kotlinx-datetime = "0.6.0"
 javalin = "6.2.0"
-jooby = "3.2.6"
+jooby = "3.2.9"
 ktor = "2.3.12"
-koin = "3.6.0-Beta5"
+koin = "4.0.0-RC1"
 koin-annotations = "1.4.0-RC3"
 micronaut = "4.5.1"
 micronaut-plugins = "4.4.2"
@@ -27,8 +27,8 @@ spring-dependency-management = "1.1.6"
 vertx = "4.5.9"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "8.1.1"
-logback = "1.5.6"
+shadow = "8.3.0"
+logback = "1.5.7"
 tomlj = "1.1.1"
 resources-optimizer = "2.6.4"
 expiring-map = "0.5.11"
@@ -42,32 +42,30 @@ popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
 fontawesome = "6.6.0"
-trix = "2.1.3"
+trix = "2.1.5"
 toastify = "1.12.0"
-tempus-dominus = "6.9.9"
+tempus-dominus = "6.9.10"
 tom-select = "2.3.1"
 imask = "7.6.1"
 tabulator = "6.2.5"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "13.0.2"
+marked = "14.0.0"
 sanitize-html = "2.13.0"
-postcss = "8.4.39"
+postcss = "8.4.41"
 postcss-loader = "8.1.1"
-autoprefixer = "10.4.19"
-tailwindcss = "3.4.6"
-cssnano = "7.0.4"
-mini-css-extract-plugin = "2.9.0"
+autoprefixer = "10.4.20"
+tailwindcss = "3.4.10"
+cssnano = "7.0.5"
+mini-css-extract-plugin = "2.9.1"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-reactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "kotlinx-coroutines" }
-kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 ksp-symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
-ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 javalin = { module = "io.javalin:javalin", version.ref = "javalin" }
 jooby-kotlin = { module = "io.jooby:jooby-kotlin", version.ref = "jooby" }
 jooby-netty = { module = "io.jooby:jooby-netty", version.ref = "jooby" }
@@ -81,7 +79,6 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koin-annotations" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
-ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 micronaut-platform = { module = "io.micronaut.platform:micronaut-platform", version.ref = "micronaut" }
 spring-boot-starter = { module = "org.springframework.boot:spring-boot-starter", version.ref = "spring-boot" }
 spring-boot-starter-webflux = { module = "org.springframework.boot:spring-boot-starter-webflux", version.ref = "spring-boot" }
@@ -101,7 +98,6 @@ kilua-gettext = { module = "dev.kilua:kilua-gettext", version.ref = "kilua-gette
 compose-gradle-plugin = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose" }
 
 [plugins]
-kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
@@ -116,7 +112,7 @@ spring-dependency-management = { id = "io.spring.dependency-management", version
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 jooby = { id = "io.jooby.run", version.ref = "jooby" }
 vertx = { id = "io.vertx.vertx-plugin", version.ref = "vertx-plugin" }
-shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
+shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 micronaut-application = { id = "io.micronaut.application", version.ref = "micronaut-plugins" }
 micronaut-aot = { id = "io.micronaut.aot", version.ref = "micronaut-plugins" }
