--- a/templates/template/gradle/libs.versions.toml
+++ b/templates/template/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kilua = "0.0.7"
-kotlin = "2.0.0"
-compose = "1.6.11"
+kilua = "0.0.10"
+kotlin = "2.0.20-RC2"
+compose = "1.7.0-alpha02"
 
 [libraries]
 kilua = { module = "dev.kilua:kilua", version.ref = "kilua" }
