Upgraded dependencies (Kotlin 2.0.20, Compose 1.7.0-alpha03, Kilua RPC 0.0.17, kotlinx-datetime 0.6.1, Javalin 6.3.0, Koin annotations 1.4.0-RC4, Micronaut 4.6.0, Spring Boot 3.3.3)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 kilua = "0.0.10"
 kilua-published = "0.0.10"
-kotlin = "2.0.20-RC2"
-compose = "1.7.0-alpha02"
+kotlin = "2.0.20"
+compose = "1.7.0-alpha03"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.20-RC2-1.0.24"
+ksp = "2.0.20-1.0.24"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.16"
+kilua-rpc = "0.0.17"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.25.0"
 kotlinx-coroutines = "1.9.0-RC.2"
 kotlinx-serialization = "1.7.1"
-kotlinx-datetime = "0.6.0"
-javalin = "6.2.0"
+kotlinx-datetime = "0.6.1"
+javalin = "6.3.0"
 jooby = "3.2.9"
 ktor = "2.3.12"
 koin = "4.0.0-RC1"
-koin-annotations = "1.4.0-RC3"
-micronaut = "4.5.1"
+koin-annotations = "1.4.0-RC4"
+micronaut = "4.6.0"
 micronaut-plugins = "4.4.2"
-spring-boot = "3.3.2"
+spring-boot = "3.3.3"
 spring-dependency-management = "1.1.6"
 vertx = "4.5.9"
 vertx-plugin = "1.4.0"
