Upgraded dependencies (Compose 1.7.0-beta01, KSP 1.0.25, Kilua RPC 0.0.18, Serialization 1.7.2, Jooby 3.3.0, Koin 4.0.0-RC2, Micronaut 4.6.1, Vert.x 4.5.10, Tempus dominus 6.9.11, Marked 14.1.1, Postcss 8.4.45, cssnano 7.0.6)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,29 +2,29 @@
 kilua = "0.0.11"
 kilua-published = "0.0.11"
 kotlin = "2.0.20"
-compose = "1.7.0-alpha03"
+compose = "1.7.0-beta01"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.20-1.0.24"
+ksp = "2.0.20-1.0.25"
 detekt = "1.23.6"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.17"
+kilua-rpc = "0.0.18"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.25.0"
 kotlinx-coroutines = "1.9.0-RC.2"
-kotlinx-serialization = "1.7.1"
+kotlinx-serialization = "1.7.2"
 kotlinx-datetime = "0.6.1"
 javalin = "6.3.0"
-jooby = "3.2.9"
+jooby = "3.3.0"
 ktor = "2.3.12"
-koin = "4.0.0-RC1"
+koin = "4.0.0-RC2"
 koin-annotations = "1.4.0-RC4"
-micronaut = "4.6.0"
+micronaut = "4.6.1"
 micronaut-plugins = "4.4.2"
 spring-boot = "3.3.3"
 spring-dependency-management = "1.1.6"
-vertx = "4.5.9"
+vertx = "4.5.10"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
 shadow = "8.3.0"
@@ -44,19 +44,19 @@ bootstrap-icons = "1.11.3"
 fontawesome = "6.6.0"
 trix = "2.1.5"
 toastify = "1.12.0"
-tempus-dominus = "6.9.10"
+tempus-dominus = "6.9.11"
 tom-select = "2.3.1"
 imask = "7.6.1"
 tabulator = "6.2.5"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "14.0.0"
+marked = "14.1.1"
 sanitize-html = "2.13.0"
-postcss = "8.4.41"
+postcss = "8.4.45"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.20"
 tailwindcss = "3.4.10"
-cssnano = "7.0.5"
+cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.1"
 
 [libraries]
