--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,34 @@
 [versions]
-kilua = "0.0.12"
+kilua = "0.0.13"
 kilua-published = "0.0.12"
 kotlin = "2.0.20"
-compose = "1.7.0-beta01"
+compose = "1.7.0-beta02"
 dokka = "1.9.20"
 nmcp = "0.0.8"
 ksp = "2.0.20-1.0.25"
-detekt = "1.23.6"
+detekt = "1.23.7"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.18"
+kilua-rpc = "0.0.19"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.25.0"
-kotlinx-coroutines = "1.9.0-RC.2"
-kotlinx-serialization = "1.7.2"
+kotlinx-coroutines = "1.9.0"
+kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 javalin = "6.3.0"
-jooby = "3.3.1"
+jooby = "3.4.1"
 ktor = "2.3.12"
-koin = "4.0.0-RC2"
+koin = "4.0.0"
 koin-annotations = "1.4.0-RC4"
-micronaut = "4.6.1"
+micronaut = "4.6.2"
 micronaut-plugins = "4.4.2"
-spring-boot = "3.3.3"
+spring-boot = "3.3.4"
 spring-dependency-management = "1.1.6"
 vertx = "4.5.10"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "8.3.0"
-logback = "1.5.7"
+shadow = "8.3.2"
+logback = "1.5.8"
 tomlj = "1.1.1"
 resources-optimizer = "2.6.4"
 expiring-map = "0.5.11"
@@ -50,12 +50,12 @@ imask = "7.6.1"
 tabulator = "6.2.5"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "14.1.1"
+marked = "14.1.2"
 sanitize-html = "2.13.0"
-postcss = "8.4.45"
+postcss = "8.4.47"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.20"
-tailwindcss = "3.4.10"
+tailwindcss = "3.4.13"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.1"
 
