--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,36 @@
 [versions]
 kilua = "0.0.13"
 kilua-published = "0.0.13"
-kotlin = "2.0.20"
-compose = "1.7.0-beta02"
+kotlin = "2.0.21"
+compose = "1.7.0"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.20-1.0.25"
+ksp = "2.0.21-1.0.25"
 detekt = "1.23.7"
 npm-publish = "3.4.2"
-gradle-plugin-publish = "1.2.1"
-kilua-rpc = "0.0.19"
+gradle-plugin-publish = "1.3.0"
+kilua-rpc = "0.0.20"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.25.0"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 javalin = "6.3.0"
-jooby = "3.4.1"
+jooby = "3.4.2"
 ktor = "2.3.12"
 koin = "4.0.0"
 koin-annotations = "1.4.0-RC4"
-micronaut = "4.6.2"
-micronaut-plugins = "4.4.2"
+micronaut = "4.6.3"
+micronaut-plugins = "4.4.3"
 spring-boot = "3.3.4"
 spring-dependency-management = "1.1.6"
 vertx = "4.5.10"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "8.3.2"
-logback = "1.5.8"
+shadow = "8.3.3"
+logback = "1.5.10"
 tomlj = "1.1.1"
-resources-optimizer = "2.6.4"
+resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.13"
 css-loader = "7.1.2"
@@ -42,20 +42,20 @@ popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
 fontawesome = "6.6.0"
-trix = "2.1.5"
+trix = "2.1.7"
 toastify = "1.12.0"
 tempus-dominus = "6.9.11"
 tom-select = "2.3.1"
 imask = "7.6.1"
-tabulator = "6.2.5"
+tabulator = "6.3.0"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "14.1.2"
-sanitize-html = "2.13.0"
+marked = "14.1.3"
+sanitize-html = "2.13.1"
 postcss = "8.4.47"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.20"
-tailwindcss = "3.4.13"
+tailwindcss = "3.4.14"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.1"
 
