Upgraded dependencies (KSP 1.0.26, Kilua RPC 0.0.21, kotlinx-atomicfu 0.26.0, Koin annotations 1.4.0, Spring Boot 3.3.5, logback 1.5.12, kilua-assets 0.0.15)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,13 +5,13 @@ kotlin = "2.0.21"
 compose = "1.7.0"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.21-1.0.25"
+ksp = "2.0.21-1.0.26"
 detekt = "1.23.7"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.3.0"
-kilua-rpc = "0.0.20"
+kilua-rpc = "0.0.21"
 kilua-gettext = "0.0.2"
-kotlinx-atomicfu = "0.25.0"
+kotlinx-atomicfu = "0.26.0"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
@@ -19,20 +19,20 @@ javalin = "6.3.0"
 jooby = "3.4.2"
 ktor = "2.3.12"
 koin = "4.0.0"
-koin-annotations = "1.4.0-RC4"
+koin-annotations = "1.4.0"
 micronaut = "4.6.3"
 micronaut-plugins = "4.4.3"
-spring-boot = "3.3.4"
+spring-boot = "3.3.5"
 spring-dependency-management = "1.1.6"
 vertx = "4.5.10"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
 shadow = "8.3.3"
-logback = "1.5.10"
+logback = "1.5.12"
 tomlj = "1.1.1"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
-npm-kilua-assets = "0.0.13"
+npm-kilua-assets = "0.0.15"
 css-loader = "7.1.2"
 style-loader = "4.0.0"
 imports-loader = "5.0.0"
