--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,36 @@
 [versions]
 kilua = "0.0.16"
 kilua-published = "0.0.16"
-kotlin = "2.0.21"
-compose = "1.7.0"
+kotlin = "2.1.0-RC2"
+compose = "1.7.1"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.0.21-1.0.26"
+ksp = "2.1.0-RC2-1.0.28"
 detekt = "1.23.7"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.3.0"
-kilua-rpc = "0.0.21"
+kilua-rpc = "0.0.22"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.26.0"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 javalin = "6.3.0"
-jooby = "3.4.3"
-ktor = "2.3.12"
-koin = "4.0.0"
-koin-annotations = "1.4.0"
-micronaut = "4.6.3"
-micronaut-plugins = "4.4.3"
+jooby = "3.5.3"
+ktor = "3.0.1"
+koin = "4.1.0-Beta1"
+koin-annotations = "2.0.0-Beta2"
+micronaut = "4.7.0"
+micronaut-plugins = "4.4.4"
 spring-boot = "3.3.5"
 spring-dependency-management = "1.1.6"
-vertx = "4.5.10"
+vertx = "5.0.0.CR1"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "8.3.4"
+shadow = "8.3.5"
 logback = "1.5.12"
 tomlj = "1.1.1"
-kaml = "0.62.2"
+kaml = "0.65.0"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.15"
@@ -42,21 +42,21 @@ html-differ = "1.4.0"
 popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
-fontawesome = "6.6.0"
+fontawesome = "6.7.0"
 trix = "2.1.8"
 toastify = "1.12.0"
 tempus-dominus = "6.9.11"
-tom-select = "2.3.1"
+tom-select = "2.4.1"
 imask = "7.6.1"
 tabulator = "6.3.0"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "14.1.3"
+marked = "15.0.1"
 sanitize-html = "2.13.1"
-postcss = "8.4.47"
+postcss = "8.4.49"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.20"
-tailwindcss = "3.4.14"
+tailwindcss = "3.4.15"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
 
@@ -86,6 +86,7 @@ spring-boot-starter-webflux = { module = "org.springframework.boot:spring-boot-s
 vertx-web = { module = "io.vertx:vertx-web", version.ref = "vertx" }
 vertx-lang-kotlin = { module = "io.vertx:vertx-lang-kotlin", version.ref = "vertx" }
 vertx-lang-kotlin-coroutines = { module = "io.vertx:vertx-lang-kotlin-coroutines", version.ref = "vertx" }
+vertx-launcher-application = { module = "io.vertx:vertx-launcher-application", version.ref = "vertx" }
 ballast-core = { module = "io.github.copper-leaf:ballast-core", version.ref = "ballast" }
 ballast-saved-state = { module = "io.github.copper-leaf:ballast-saved-state", version.ref = "ballast" }
 ballast-repository = { module = "io.github.copper-leaf:ballast-repository", version.ref = "ballast" }
