--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,36 @@
 [versions]
 kilua = "0.0.17"
 kilua-published = "0.0.17"
-kotlin = "2.1.0-RC2"
-compose = "1.7.1"
+kotlin = "2.1.0"
+compose = "1.8.0-alpha01"
 dokka = "1.9.20"
 nmcp = "0.0.8"
-ksp = "2.1.0-RC2-1.0.28"
+ksp = "2.1.0-1.0.29"
 detekt = "1.23.7"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.3.0"
-kilua-rpc = "0.0.23"
+kilua-rpc = "0.0.24"
 kilua-gettext = "0.0.2"
-kotlinx-atomicfu = "0.26.0"
+kotlinx-atomicfu = "0.26.1"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 javalin = "6.3.0"
-jooby = "3.5.3"
-ktor = "3.0.1"
+jooby = "3.5.4"
+ktor = "3.0.2"
 koin = "4.1.0-Beta1"
 koin-annotations = "2.0.0-Beta2"
-micronaut = "4.7.0"
+micronaut = "4.7.1"
 micronaut-plugins = "4.4.4"
-spring-boot = "3.3.6"
+spring-boot = "3.4.0"
 spring-dependency-management = "1.1.6"
-vertx = "5.0.0.CR1"
+vertx = "5.0.0.CR2"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "8.3.5"
+shadow = "9.0.0-beta4"
 logback = "1.5.12"
 tomlj = "1.1.1"
-kaml = "0.65.0"
+kaml = "0.66.0"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.15"
@@ -42,7 +42,7 @@ html-differ = "1.4.0"
 popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
-fontawesome = "6.7.0"
+fontawesome = "6.7.1"
 trix = "2.1.8"
 toastify = "1.12.0"
 tempus-dominus = "6.9.11"
@@ -51,12 +51,12 @@ imask = "7.6.1"
 tabulator = "6.3.0"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "15.0.1"
+marked = "15.0.3"
 sanitize-html = "2.13.1"
 postcss = "8.4.49"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.20"
-tailwindcss = "3.4.15"
+tailwindcss = "3.4.16"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
 
