Upgraded dependencies (Kotlin 2.1.10-RC2, Compose 1.8.0-alpha02, Dokka 2.0.0, Kilua RPC 0.0.25, atomicfu 0.27.0, Coroutines 1.10.1, Serialization 1.8.0, Javalin 6.4.0, Jooby 3.6.0, Ktor 3.0.3, Koin 4.1.0-Beta5, Koin annotations 2.0.0-Beta3, Micronaut 4.7.4, Spring Boot 3.4.1, Vert.x 5.0.0.CR3, Shadow 9.0.0-beta5, logback 1.5.16, Kaml 0.67.0, Kilua assets 0.0.16, Fontawesome 6.7.2, Trix 2.1.12, Tabulator 6.3.1, marked 15.0.6, sanitize-html 2.14.0, postcss 8.5.1, tailwindcss 3.4.17, Gradle 8.12)

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,7 @@ kotlin.mpp.stability.nowarn=true
 kotlin.code.style=official
 ksp.useKSP2=false
 kapt.use.k2=true
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+org.jetbrains.dokka.experimental.tryK2=true
+org.jetbrains.dokka.experimental.tryK2.nowarn=true
