--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,39 +1,39 @@
 [versions]
 kilua = "0.0.18"
 kilua-published = "0.0.18"
-kotlin = "2.1.0"
-compose = "1.8.0-alpha01"
-dokka = "1.9.20"
+kotlin = "2.1.10-RC2"
+compose = "1.8.0-alpha02"
+dokka = "2.0.0"
 nmcp = "0.0.8"
-ksp = "2.1.0-1.0.29"
+ksp = "2.1.10-RC2-1.0.29"
 detekt = "1.23.7"
 npm-publish = "3.4.2"
 gradle-plugin-publish = "1.3.0"
-kilua-rpc = "0.0.24"
+kilua-rpc = "0.0.25"
 kilua-gettext = "0.0.2"
-kotlinx-atomicfu = "0.26.1"
-kotlinx-coroutines = "1.9.0"
-kotlinx-serialization = "1.7.3"
+kotlinx-atomicfu = "0.27.0"
+kotlinx-coroutines = "1.10.1"
+kotlinx-serialization = "1.8.0"
 kotlinx-datetime = "0.6.1"
-javalin = "6.3.0"
-jooby = "3.5.4"
-ktor = "3.0.2"
-koin = "4.1.0-Beta1"
-koin-annotations = "2.0.0-Beta2"
-micronaut = "4.7.1"
-micronaut-plugins = "4.4.4"
-spring-boot = "3.4.0"
-spring-dependency-management = "1.1.6"
-vertx = "5.0.0.CR2"
+javalin = "6.4.0"
+jooby = "3.6.0"
+ktor = "3.0.3"
+koin = "4.1.0-Beta5"
+koin-annotations = "2.0.0-Beta3"
+micronaut = "4.7.4"
+micronaut-plugins = "4.4.5"
+spring-boot = "3.4.1"
+spring-dependency-management = "1.1.7"
+vertx = "5.0.0.CR3"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "9.0.0-beta4"
-logback = "1.5.12"
+shadow = "9.0.0-beta5"
+logback = "1.5.16"
 tomlj = "1.1.1"
-kaml = "0.66.0"
+kaml = "0.67.0"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
-npm-kilua-assets = "0.0.15"
+npm-kilua-assets = "0.0.16"
 css-loader = "7.1.2"
 style-loader = "4.0.0"
 imports-loader = "5.0.0"
@@ -42,21 +42,21 @@ html-differ = "1.4.0"
 popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
-fontawesome = "6.7.1"
-trix = "2.1.8"
+fontawesome = "6.7.2"
+trix = "2.1.12"
 toastify = "1.12.0"
 tempus-dominus = "6.9.11"
 tom-select = "2.4.1"
 imask = "7.6.1"
-tabulator = "6.3.0"
+tabulator = "6.3.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "15.0.3"
-sanitize-html = "2.13.1"
-postcss = "8.4.49"
+marked = "15.0.6"
+sanitize-html = "2.14.0"
+postcss = "8.5.1"
 postcss-loader = "8.1.1"
 autoprefixer = "10.4.20"
-tailwindcss = "3.4.16"
+tailwindcss = "3.4.17"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
 
@@ -112,7 +112,6 @@ kilua-rpc = { id = "dev.kilua.rpc", version.ref = "kilua-rpc" }
 gradle-plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "gradle-plugin-publish" }
 kilua = { id = "dev.kilua", version.ref = "kilua-published" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
-spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 jooby = { id = "io.jooby.run", version.ref = "jooby" }
 vertx = { id = "io.vertx.vertx-plugin", version.ref = "vertx-plugin" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
